k8s/overlays/shokohsc/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dragons-flame-dev
  labels:
    namespace: dragons-flame-dev
    goldilocks.fairwinds.com/enabled: "true"
