k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dragons-flame
spec:
  selector:
    matchLabels:
      app: dragons-flame
  template:
    metadata:
      labels:
        app: dragons-flame
    spec:
      serviceAccountName: dragons-flame-dev
      securityContext:
        fsGroup: 1000
      containers:
        - name: dragons-flame
          image: kwslavens74/dragons-flame
          command:
            - npm
          args:
            - run
            - skaffold
          ports:
            - name: http
              containerPort: 5005
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
